gecco operators and output for params testing